welcome.lessons.welcome.bat.bool1.Close10.scala.error
close10:4: error: ')' expected but '=' found.
			if ((Math.abs(10 - a))=(Math.abs(10 - b))) {0} 
                                              ^close10:4: error: illegal start of simple expression
			if ((Math.abs(10 - a))=(Math.abs(10 - b))) {0} 
                                                                 ^